	rect->y should be ignored because we're resizing old_rect
	according to the given gravity, not rect.  So, in the cases where
	nothing fancy needs to be done, we need to at least copy over
	old_rect->x and old_rect->y.  Stupid bug caused by usage being
	different than original version and most testcases not catching
	the difference...

2005-10-21  Elijah Newren  <newren@gmail.com>

	* constraints-ideas.txt: Five quick ideas/problems/cleanups I
	thought of today and at various times in the past but kept
	forgetting and don't want to forget again

2005-10-20  Elijah Newren  <newren@gmail.com>

	* constraints-ideas.txt: Add two more bugs to look at from latest
	scouring of bugzilla

2005-10-20  Elijah Newren  <newren@gmail.com>

	* constraints-ideas.txt: Note about decorationless windows and
	screen-relative constraints, mark gravity bug as fixed (YAAY!)

	* src/constraints.c (meta_window_constrain): Make a big note
	to notify people that rectangles are for positions/sizes of
	inner windows, not outer, to try to avoid a very common
	mistake

	* src/display.c (handle_net_moveresize_window): Update the
	FIXME to provide more hints on exactly how this is broken,
	(handle_net_restack_window): put a couple FIXMEs in there
	since this function is broken too--thank goodness both of
	these are #ifdef'd out

	* src/window.c:
	
	(meta_window_new_with_attrs, meta_window_apply_session_info,
	meta_window_configure_request):
	Specify the REAL GRAVITY INSTEAD OF LYING and saying it's
	NorthWest, and then hoping that adjust_for_gravity() will bail
	us out by figuring out what we really meant. (!)

	(adjust_for_gravity):
	Simplify the argument list by just taking the stupid
	rectangle, don't manually figure out the window's gravity but
	instead have it get passed to this function (otherwise
	display.c:handle_net_moveresize_window() will break)--besides
	doing this manual figuring out of the gravity masked a bug in
	having the wrong gravity passed to
	meta_window_move_resize_internal()